more fixes: - fixed stat-text css, and needless span removal - ignore span inside stat-text template when cleaning up html - updated stat-text css so its styling is not overriden - better whitespace cleanup for HTML output files

--- a/src/app/css/_stat-text.scss
+++ b/src/app/css/_stat-text.scss
@@ -9,6 +9,10 @@ div.stat-text p, div.stat-text span {
   line-height: 3.6rem;
 }
 
+.article .stat-text p, .article .stat-text span {
+  font-size: 2.4rem;
+}
+
 .stat-text-highlight {
   color: $stat-text-color;
   font-weight: 600;
